syntax = "proto3";
package rpc;
option go_package = "rpc";

import "google/protobuf/timestamp.proto";

service PoeStatus {
  rpc SaveScanResults(ScanResults) returns (Empty);
}

message ScanResults {
  string ScanIP = 1;
  string Host = 2;
  google.protobuf.Timestamp CreatedAt = 3;
  repeated PortInfo Ports = 4;
  string ScanError = 5;
}

message PortInfo {
  int32 Port = 1;
  bool Open = 2;
}

message Empty {
}
